--- a/packages/deploy/src/data/deploy/blast-sepolia/config.json
+++ b/packages/deploy/src/data/deploy/blast-sepolia/config.json
@@ -22,6 +22,13 @@
     },
     {
       "type": "mintable",
+      "id": "fwbtc",
+      "name": "Fake Wrapped BTC",
+      "symbol": "FWBTC",
+      "decimals": 8
+    },
+    {
+      "type": "mintable",
       "id": "usdc",
       "name": "USD Coin",
       "symbol": "USDC",
@@ -40,6 +47,13 @@
       "symbol": "DOGE",
       "name": "Dogecoin",
       "decimals": 8
+    },
+    {
+      "type": "mintable",
+      "id": "pepe",
+      "symbol": "PEPE",
+      "name": "pepe",
+      "decimals": 18
     }
   ],
   "prices": [
@@ -49,6 +63,13 @@
       "type": "http-get",
       "direction": "forward",
       "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=ETHUSDC).price"
+    },
+    {
+      "id": "btc-usdc",
+      "label": "btc/usdc",
+      "type": "http-get",
+      "direction": "forward",
+      "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=BTCUSDC).price"
     },
     {
       "id": "link-usdc",
@@ -63,6 +84,13 @@
       "type": "http-get",
       "direction": "forward",
       "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=DOGEUSDT).price"
+    },
+    {
+      "id": "pepe-usdc",
+      "label": "pepe/usdc",
+      "type": "http-get",
+      "direction": "forward",
+      "query": "json(https://api.binance.com/api/v3/ticker/price?symbol=PEPEUSDT).price"
     }
   ],
   "uniswap": {
@@ -80,6 +108,16 @@
         "tokenBBalance": "2_000_000_000_000",
         "priceId": "eth-usdc",
         "priceBaseTokenId": "fweth"
+      },
+      {
+        "id": "fwbtc-usdc",
+        "tokenAId": "fwbtc",
+        "tokenBId": "usdc",
+        "fee": "0.1%",
+        "tokenABalance": "40_000_000",
+        "tokenBBalance": "2_000_000_000_000",
+        "priceId": "btc-usdc",
+        "priceBaseTokenId": "fwbtc"
       },
       {
         "id": "link-usdc",
@@ -100,6 +138,16 @@
         "tokenBBalance": "2_000_000_000_000",
         "priceId": "doge-usdc",
         "priceBaseTokenId": "doge"
+      },
+      {
+        "id": "pepe-usdc",
+        "tokenAId": "pepe",
+        "tokenBId": "usdc",
+        "fee": "0.3%",
+        "tokenABalance": "2_000_000_000_000_000_000",
+        "tokenBBalance": "2_000_000_000_000",
+        "priceId": "pepe-usdc",
+        "priceBaseTokenId": "pepe"
       }
     ]
   },
@@ -123,6 +171,22 @@
         "priceAgoMC": "1 min",
         "positionMinAmount": "0.001",
         "quoteLimit": "100_000_000"
+      }
+    },
+    {
+      "id": "fwbtc-usdc",
+      "uniswapPoolId": "fwbtc-usdc",
+      "baseTokenId": "fwbtc",
+      "params": {
+        "interestRate": "5.4%",
+        "maxLeverage": "20",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "mcSlippage": "5.0%",
+        "priceAgo": "15 min",
+        "priceAgoMC": "1 min",
+        "positionMinAmount": "0.0001",
+        "quoteLimit": "100_000_000_000"
       }
     },
     {
@@ -155,6 +219,22 @@
         "priceAgoMC": "10 sec",
         "positionMinAmount": "1",
         "quoteLimit": "100_000_000"
+      }
+    },
+    {
+      "id": "pepe-usdc",
+      "uniswapPoolId": "pepe-usdc",
+      "baseTokenId": "pepe",
+      "params": {
+        "interestRate": "5.4%",
+        "maxLeverage": "5",
+        "swapFee": "0.1%",
+        "fee": "2%",
+        "mcSlippage": "1.0%",
+        "priceAgo": "15 min",
+        "priceAgoMC": "10 sec",
+        "positionMinAmount": "1_000_000",
+        "quoteLimit": "100_000_000_000"
       }
     }
   ],
