update blast node to ankr

--- a/packages/keeper/config/config.blast.json
+++ b/packages/keeper/config/config.blast.json
@@ -1,6 +1,6 @@
 {
   "systemContextDefaults": {
-    "ethNodeUri": "https://rpc.blast.io"
+    "ethNodeUri": "https://rpc.ankr.com/blast"
   },
   "connection": {
     "ethOptions": {
