--- a/packages/keeper/config/config.blast.json
+++ b/packages/keeper/config/config.blast.json
@@ -26,6 +26,20 @@
       "address": "0xb312D61915c878938fcE09D13DD3006c6835b3e5",
       "minProfitQuote": "1",
       "minProfitBase": "1"
+    },
+    {
+      "keeperType": "reinit",
+      "description": "usde/usdb",
+      "address": "0xc91D6032d72796b9a0558Ab9ef45C100c9fDe1f8",
+      "minProfitQuote": "0.5",
+      "minProfitBase": "0.5"
+    },
+    {
+      "keeperType": "reinit",
+      "description": "susde/usdb",
+      "address": "0x12afF531E86f5E9763c6C7D0994AdEfB1a1f844c",
+      "minProfitQuote": "0.5",
+      "minProfitBase": "0.5"
     }
   ]
 }
